feat: layout pizzeria

--- a/la-mia-pizzeria-static/wwwroot/css/site.css
+++ b/la-mia-pizzeria-static/wwwroot/css/site.css
@@ -1,18 +1,43 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: var(--my-bg-color-primary);
+    color: var(--my-text-color-primary);
+}
+/*variabili*/
+:root {
+    --my-text-color-primary: red;
+    --my-text-color-secondary: white;
+    --my-bg-color-primary: #383838;
+}
+
+
+/*comuni*/
+
+Header > nav,
+thead > tr {
+    color: var(--my-text-color-primary);
+}
+tr {
+    border-style: hidden;
+    color: var(--my-text-color-secondary)
+}
+
+a{
+    color: currentColor !important;
+    text-decoration:none;
 }
