--- a/la-mia-pizzeria-static/Views/Home/Index.cshtml
+++ b/la-mia-pizzeria-static/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-    Layout = null;
     List<Pizza> listaPizza = new List<Pizza>();
 
 
@@ -11,48 +10,37 @@
     listaPizza.Add(new Pizza("Pizza Napoletana", "Molto Buona", "~/img/PizzaNapoletana.jpg", 14.00M));
     listaPizza.Add(new Pizza("Pizza Patate e Salsiccia", "Molto Buona", "~/img/PizzaPatateSalsiccia.jpg", 12.50M));
 }
-<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 
-
-
-<body class="bg-dark text-white">
-
-    <div class="text-center container-xxl">
-        <h1>Le mie pizze</h1>
-
-        <table class="table table-dark m-5 ">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Descrizione</th>
-                    <th scope="col">Prezzo</th>
-                    <th scope="col">Immagine</th>
-                </tr>
-            </thead>
-            <tbody style="vertical-align:unset;">
-                @{
-                    int i = 1;
-                    foreach (var item in listaPizza)
-                    {
-                        <tr>
-                            <th scope="row">@i</th>
-                            <td>@item.Name</td>
-                            <td>@item.Description</td>
-                            <td>@item.Price</td>
-                            <td>
-                                <img style="width: 150px" src=@Url.Content(item.PizzaImg) alt=@item.Name>
-                            </td>
-                        </tr>
-                        i++;
-                    }
+<div class="text-center container-xxl">
+    <h1 style="color: var(--my-text-color-primary);">I Nostri Prodotti</h1>
+    <table class="table m-5 border-0">
+        <thead>
+            <tr>
+                <th scope="col"></th>
+                <th scope="col">Nome</th>
+                <th scope="col">Descrizione</th>
+                <th scope="col">Prezzo</th>
+                <th scope="col">Immagine</th>
+            </tr>
+        </thead>
+        <tbody style="vertical-align:unset;">
+            @{
+                int i = 1;
+                foreach (var item in listaPizza)
+                {
+                    <tr>
+                        <th scope="row">@i</th>
+                        <td>@item.Name</td>
+                        <td>@item.Description</td>
+                        <td>@item.Price€</td>
+                        <td>
+                            <img style="width: 150px; height: 100px" src=@Url.Content(item.PizzaImg) alt=@item.Name>
+                        </td>
+                    </tr>
+                    i++;
                 }
-            </tbody>
-        </table>
-    </div>
-
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
-
+            }
+        </tbody>
+    </table>
+</div>
 
